RESOLVED FIXED264940
[GTK][WPE] Fix Real-time Linux warning when RLIMIT_RTTIME is not defined
https://bugs.webkit.org/show_bug.cgi?id=264940
Summary [GTK][WPE] Fix Real-time Linux warning when RLIMIT_RTTIME is not defined
Olivier Blin
Reported 2023-11-16 05:01:05 PST
[169/1717] Building CXX object Source/WTF/wtf/CMakeFiles/WTF.dir/linux/RealTimeThreads.cpp.o ../../Source/WTF/wtf/linux/RealTimeThreads.cpp:155:16: warning: unused function 'realTimeKitGetProperty' [-Wunused-function] static int64_t realTimeKitGetProperty(GDBusProxy* proxy, const char* propertyName, GError** error)
Attachments
Olivier Blin
Comment 1 2023-11-16 05:02:41 PST
EWS
Comment 2 2023-11-16 12:27:28 PST
Committed 270841@main (ffd338d9906b): <https://commits.webkit.org/270841@main> Reviewed commits have been landed. Closing PR #20601 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.