[GTK][WPE] Fix Real-time Linux warning when RLIMIT_RTTIME is not defined https://bugs.webkit.org/show_bug.cgi?id=264940

Reviewed by Michael Catanzaro.

* Source/WTF/wtf/linux/RealTimeThreads.cpp:
realTimeKitGetProperty() is unused when RLIMIT_RTTIME is not defined.

Canonical link: https://commits.webkit.org/270841@main